// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Empty Screen Snapshots EmptyDocumentsScreen should render correctly 1`] = `
<View
  edges={[]}
  style={
    [
      {
        "backgroundColor": "#F7F3EC",
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3EC",
        "flex": 1,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 16,
          "borderBottomRightRadius": 16,
          "borderTopLeftRadius": 0,
          "borderTopRightRadius": 0,
          "elevation": 10,
          "shadowColor": "rgba(29, 28, 27, 0.10)",
          "shadowOffset": {
            "height": 12,
            "width": 0,
          },
          "shadowOpacity": 0.14,
          "shadowRadius": 18,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#F1EBE1",
            "borderBottomLeftRadius": 16,
            "borderBottomRightRadius": 16,
            "borderColor": "transparent",
            "borderRadius": 16,
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 0,
            "borderWidth": 0,
            "boxShadow": "none",
            "overflow": "visible",
            "padding": 16,
            "paddingBottom": 12,
            "paddingHorizontal": 0,
            "paddingTop": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "overflow": "visible",
                "paddingBottom": 8,
                "paddingHorizontal": 20,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#1D1C1B",
                "flex": 1,
                "fontFamily": "Newsreader-Regular",
                "fontSize": 30,
                "fontWeight": "400",
                "letterSpacing": -0.45,
                "lineHeight": 34,
                "textAlign": "left",
              }
            }
          >
            Documents
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F7F3EC",
          "flex": 1,
          "justifyContent": "center",
        },
        null,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 20,
          },
          undefined,
        ]
      }
      testID="empty-documents"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E6F2FF",
            "borderRadius": 9999,
            "height": 104,
            "justifyContent": "center",
            "marginBottom": 20,
            "width": 104,
          }
        }
      >
        <Text
          accessibilityLabel="folder-open-outline"
          color="#257BED"
          size={44}
          testID="icon-folder-open-outline"
        >
          folder-open-outline
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#1D1C1B",
            "fontFamily": "Newsreader-Regular",
            "fontSize": 24,
            "fontWeight": "400",
            "letterSpacing": -0.36,
            "lineHeight": 29,
            "textAlign": "center",
          }
        }
      >
        Add a companion to get started
      </Text>
      <Text
        style={
          {
            "color": "#5C5956",
            "fontFamily": "Satoshi-Regular",
            "fontSize": 14.5,
            "fontWeight": "400",
            "letterSpacing": -0.12,
            "lineHeight": 20,
            "marginTop": 8,
            "textAlign": "center",
          }
        }
      >
        Insurance papers, lab results and adoption records are tied to a companion. Add one first to start uploading documents.
      </Text>
      <View
        accessibilityLabel="Add a companion"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#302F2E",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "marginTop": 24,
              "minHeight": 54,
              "paddingHorizontal": 28,
            },
            null,
          ]
        }
        testID="empty-documents-action"
      >
        <Text
          accessibilityLabel="add"
          color="#FFFFFF"
          size={18}
          testID="icon-add"
        >
          add
        </Text>
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 16.5,
              "fontWeight": "500",
              "letterSpacing": -0.16,
              "lineHeight": 24,
            }
          }
        >
          Add a companion
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Empty Screen Snapshots GenericEmptyScreen should render with all props 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F3EC",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "gap": 16,
        "padding": 24,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#F7F3EC",
            "borderColor": "#E5DCCF",
            "borderRadius": 16,
            "borderWidth": 1,
            "boxShadow": "0px 1px 2px rgba(0,0,0,0.05)",
            "padding": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#302F2E",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 26,
              "fontWeight": "500",
              "letterSpacing": -0.28,
              "lineHeight": 33,
              "marginBottom": 8,
              "textAlign": "left",
            }
          }
        >
          No Documents
        </Text>
        <Text
          style={
            {
              "color": "#5C5956",
              "fontFamily": "Satoshi-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.16,
              "lineHeight": 24,
            }
          }
        >
          Start by adding your first document
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Empty Screen Snapshots GenericEmptyScreen should render with different icon 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F3EC",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "gap": 16,
        "padding": 24,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#F7F3EC",
            "borderColor": "#E5DCCF",
            "borderRadius": 16,
            "borderWidth": 1,
            "boxShadow": "0px 1px 2px rgba(0,0,0,0.05)",
            "padding": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#302F2E",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 26,
              "fontWeight": "500",
              "letterSpacing": -0.28,
              "lineHeight": 33,
              "marginBottom": 8,
              "textAlign": "left",
            }
          }
        >
          No Companions
        </Text>
        <Text
          style={
            {
              "color": "#5C5956",
              "fontFamily": "Satoshi-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.16,
              "lineHeight": 24,
            }
          }
        >
          Add a companion to get started
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Empty Screen Snapshots GenericEmptyScreen should render with minimal props 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F3EC",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "gap": 16,
        "padding": 24,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#F7F3EC",
            "borderColor": "#E5DCCF",
            "borderRadius": 16,
            "borderWidth": 1,
            "boxShadow": "0px 1px 2px rgba(0,0,0,0.05)",
            "padding": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#302F2E",
              "fontFamily": "Satoshi-Medium",
              "fontSize": 26,
              "fontWeight": "500",
              "letterSpacing": -0.28,
              "lineHeight": 33,
              "marginBottom": 8,
              "textAlign": "left",
            }
          }
        >
          Empty
        </Text>
        <Text
          style={
            {
              "color": "#5C5956",
              "fontFamily": "Satoshi-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.16,
              "lineHeight": 24,
            }
          }
        >
          No items found
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
